src/styles/molecules/_molecules.alert.scss
@use '../quarks' as *;

/**
 * ALERT VARIABLES
 * -------------------------------------------------------------------
 */

.m-alert {
  --alert-color:                  var(--STATE-INFO);
  --alert-bg-color:               var(--BG-COLOR-LIGHT);
  --alert-border-color:           var(--alert-color);

  --alert-success-color:          var(--STATE-SUCCESS);
  --alert-success-border-color:   var(--alert-success-color);

  --alert-warning-color:          var(--STATE-WARNING);
  --alert-warning-border-color:   var(--alert-warning-color);

  --alert-danger-color:           var(--STATE-DANGER);
  --alert-danger-border-color:    var(--alert-danger-color);

  --alert-padding:                var(--SPACER);
}

/**
 * ALERTS
 * -------------------------------------------------------------------
 */

.m-alert {
  background-color: var(--alert-bg-color);
  border: var(--BORDER-WIDTH) solid var(--alert-border-color);
  border-radius: var(--BORDER-RADIUS);
  color: var(--alert-color);
  padding: var(--alert-padding);
  position: relative;

  .m-alert__close {
    position: absolute;
    right: 0;
    top: 0;
  }
}

/**
 * ALERTS ELEMENTS
 * -------------------------------------------------------------------
 */

.m-alert__icon {
  float: left;
  margin: calc(var(--SPACER-XS) / -3) var(--SPACER-XS) 0 0;

  .ai {
    font-size: 1.5rem;
  }
}

.m-alert__actions {
  margin-bottom: calc(var(--SPACER-XS) * -1);

  @include at($screen-xs) {
    display: flex;
    margin-bottom: 0;
  }

  .a-button {
    margin-bottom: var(--SPACER-XS);

    @include at($screen-xs) {
      margin-bottom: 0;

      &:not(:first-child) {
        margin-left: var(--SPACER-XS);
      }
    }
  }
}

/**
 * ALERTS MODIFIERS
 * -------------------------------------------------------------------
 */

.m-alert {
  &.m-alert--success {
    --alert-color: var(--alert-success-color);
    --alert-border-color: var(--alert-success-border-color);
  }

  &.m-alert--warning {
    --alert-color: var(--alert-warning-color);
    --alert-border-color: var(--alert-warning-border-color);
  }

  &.m-alert--danger {
    --alert-color: var(--alert-danger-color);
    --alert-border-color: var(--alert-danger-border-color);
  }
}

.m-alert.m-alert--inline {
  --alert-padding: var(--SPACER-XS);
}

